tests/src/frontend/typechecking/invalid/nullable_2.sk
fun getBoxedNull<T: nonNullable>(): Nullable<T> {
  Box(Null())
}
